[package]
name = "variables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "tools"
test = false
bench = false

[[bin]]
name = "dates"
test = false
bench = false

[[example]]
name = "tools_test"
crate-type = ["bin"]